--- a/contact.html
+++ b/contact.html
@@ -47,16 +47,16 @@
                 <span class="burger"><i class="fa-solid fa-bars"></i></span>
                 <ul class="flex">
                     <span class="closeBtn"><i class="fa-solid fa-circle-xmark"></i></span>
-                    <li><a href="index.html">Accueil</a></li>
-                    <li><a href="#">Actualités</a></li>
+                    <li><a href="./index.html">Accueil</a></li>
+                    <li><a href="./blog.html">Actualités</a></li>
                     <li><a href="./servicelist.html">Nos services</a></li>
-                    <li><a href="contact.html" class="active">Contact</a></li>
+                    <li><a href="./contact.html" class="active">Contact</a></li>
                 </ul>
             </nav>
         </div>
         <div class="banner interne">
             <div class="slogan" data-aos="fade-up" data-aos-duration="1500">
-                <h1><strong>Contactez</strong> notre cabinet<br><strong>24h/24</strong> 7j/7</h1>
+                <h1>Contactez notre cabinet<br><strong>24h/24</strong> 7j/7</h1>
                 <p>N'hésitez pas à nous contacter pour toute demande d'information.</p>
             </div>
         </div>
@@ -65,7 +65,7 @@
         <section class="contact">
             <div class="container">
                 <div class="form" data-aos="fade-up" data-aos-duration="1500">
-                    <h2 class="title">Contactez-nous</h2>
+                    <h2 class="title"><span class="subtitle">Formulaire de contact</span>Nous sommes toujours là pour vous assister dans toutes vos démarches judiciaires</h2>
                     <form action="#" method="post">
                         <div class="input-group">
                             <input type="text" name="name" id="name" placeholder="Nom & Prénom" required>
@@ -87,20 +87,34 @@
                 <div class="infos" data-aos="fade-up" data-aos-duration="1500">
                     <h2>Informations</h2>
                     <div class="item">
-                        <span class="ico"><i class="fa-solid fa-location-dot"></i></span>
-                        <p>20 Bd des moutons, 4429 Katangua</p>
+                        <h3>Adresse</h3>
+                        <div class="group">
+                            <span class="ico"><i class="fa-solid fa-location-dot"></i></span>
+                            <p>20 Bd des moutons, 4429 Katangua</p>
+                        </div>
                     </div>
                     <div class="item">
-                        <span class="ico"><i class="fa-solid fa-phone"></i></span>
-                        <a href="tel:+92 92 82 13 33">+92 92 82 13 33</a>
+                        <h3>Contact</h3>
+                        <div class="group">
+                            <span class="ico"><i class="fa-solid fa-phone"></i></span>
+                            <a href="tel:+92 92 82 13 33">+92 92 82 13 33</a>
+                        </div>
+                        <div class="group">
+                            <span class="ico"><i class="fa-solid fa-envelope"></i></span>
+                            <a href="mailto:contact@lawcorp.com">contact@lawcorp.com</a>
+                        </div>
                     </div>
                     <div class="item">
-                        <span class="ico"><i class="fa-solid fa-envelope"></i></span>
-                        <a href="mailto:contact@lawcorp.com">contact@lawcorp.com</a>
-                    </div>
-                    <div class="item">
-                        <span class="ico"><i class="fa-solid fa-clock"></i></span>
-                        <p>Du lundi au Samedi de 10h à 20h</p>
+                       <h3>Horaires d'ouverture</h3>
+                       <table>
+                        <tr><td>Lundi</td><td>08h - 18h</td></tr>
+                        <tr><td>Mardi</td><td>08h - 18h</td></tr>
+                        <tr><td>Mercredi</td><td>08h - 18h</td></tr>
+                        <tr><td>Jeudi</td><td>08h - 18h</td></tr>
+                        <tr><td>Vendredi</td><td>08h - 17h</td></tr>
+                        <tr><td>Samedi</td><td>08h - 14h</td></tr>
+                        <tr><td>Dimance</td><td>Fermé</td></tr>
+                       </table>
                     </div>
                 </div>
             </div>
