--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                 <span class="burger"><i class="fa-solid fa-bars"></i></span>
                 <ul class="flex">
                     <span class="closeBtn"><i class="fa-solid fa-circle-xmark"></i></span>
-                    <li><a href="#" class="active">Accueil</a></li>
-                    <li><a href="#">Actualités</a></li>
+                    <li><a href="./index.html" class="active">Accueil</a></li>
+                    <li><a href="./blog.html">Actualités</a></li>
                     <li><a href="./servicelist.html">Nos services</a></li>
                     <li><a href="./contact.html">Contact</a></li>
                 </ul>
@@ -339,7 +339,7 @@
                         <div class="blog-slider__content">
                         <span class="blog-slider__code">Mami Fall</span>
                         <div class="blog-slider__title">CEO Takku</div>
-                        <div class="blog-slider__text"><span>&#8223;</span>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae voluptate repellendus magni illo ea animi? </div>
+                        <div class="blog-slider__text"><span>&#8223;</span>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae voluptate repellendus magni illo ea animi?Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae voluptate repellendus magni illo ea animi? </div>
                         </div>
                     </div>
                     <div class="blog-slider__item swiper-slide">
@@ -349,7 +349,7 @@
                         <div class="blog-slider__content">
                         <span class="blog-slider__code">Cheikh Kanté</span>
                         <div class="blog-slider__title">DG Woyofal</div>
-                        <div class="blog-slider__text"><span>&#8223;</span>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae voluptate repellendus magni illo ea animi?</div>
+                        <div class="blog-slider__text"><span>&#8223;</span>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae voluptate repellendus magni illo ea animi?Lorem ipsum dolor sit amet </div>
                         </div>
                     </div>
                     
@@ -360,7 +360,7 @@
                         <div class="blog-slider__content">
                         <span class="blog-slider__code">Moussa Dème</span>
                         <div class="blog-slider__title">PDG Sonatel</div>
-                        <div class="blog-slider__text"><span>&#8223;</span>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae voluptate repellendus magni illo ea animi?</div>
+                        <div class="blog-slider__text"><span>&#8223;</span>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae voluptate repellendus magni illo ea animi?Lorem ipsum dolor sit amet consectetur, adipisicing elit</div>
                         </div>
                     </div>
                     
@@ -423,7 +423,7 @@
                         <span class="date"><i class="fa-solid fa-calendar-days"></i> 13 Dec, 2024</span>
                         <h3 class="new-title">Comment gagner un procés ?</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima, eos?</p>
-                        <a href="#" class="seemore">Lire +</a>
+                        <a href="./article.html" class="seemore">Lire +</a>
                     </div>
                 </div>
                 <div class="item-new" data-aos="fade-up" data-aos-duration="1500">
@@ -434,7 +434,7 @@
                         <span class="date"><i class="fa-solid fa-calendar-days"></i> 13 Dec, 2024</span>
                         <h3 class="new-title">Le droit de divorce</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima, eos?</p>
-                        <a href="#" class="seemore">Lire +</a>
+                        <a href="./article.html" class="seemore">Lire +</a>
                     </div>
                 </div>
                 <div class="item-new" data-aos="fade-up" data-aos-duration="1500">
@@ -445,7 +445,7 @@
                         <span class="date"><i class="fa-solid fa-calendar-days"></i> 13 Dec, 2024</span>
                         <h3 class="new-title">Droit de la famille</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima, eos?</p>
-                        <a href="#" class="seemore">Lire +</a>
+                        <a href="./article.html" class="seemore">Lire +</a>
                     </div>
                 </div>
             </div>
@@ -462,8 +462,9 @@
         </section>
         <section class="map" data-aos="fade-up" data-aos-duration="1500">
             <h2 class="title"><span class="subtitle">Où nous trouver ?</span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit, nemo</h2>
-            <div class="zone">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26412.902356809667!2d-118.58599265133023!3d34.15624710717531!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c299205af0374b%3A0x5f6b5f8cbe2e8f9a!2sTarzana%2C%20Los%20Angeles%2C%20Californie%2C%20%C3%89tats-Unis!5e0!3m2!1sfr!2sma!4v1733498424788!5m2!1sfr!2sma" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <div class="zone" data-aos="fade-up" data-aos-duration="1500">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.073013073073!2d3.876715314266073!3d43.61076972238347!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12b5f6f4b3b3b1e1%3A0x1
+                1b3b1e1b3b1b3b1!2sMontpellier!5e0!3m2!1sfr!2sfr!4v1633663666827!5m2!1sfr!2sfr" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
         </section>
     </main>
@@ -472,8 +473,8 @@
             <div class="bloc" data-aos="fade-up" data-aos-duration="1500">
                 <h3>Accés rapide</h3>
                 <ul>
-                    <li><a href="#" class="active">Accueil</a></li>
-                    <li><a href="#">Actualités</a></li>
+                    <li><a href="./index.html" class="active">Accueil</a></li>
+                    <li><a href="./blog.html">Actualités</a></li>
                     <li><a href="./servicelist.html">Nos services</a></li>
                     <li><a href="./contact.html">Contact</a></li>
                 </ul>
