--- a/article.html
+++ b/article.html
@@ -66,32 +66,37 @@
     </header>
     <main>
        <div class="newslist">
-            <section class="news">
-                <div class="container">
-                    <div class="newItem" data-aos="fade-up" data-aos-duration="1500">
-                        <div class="img-new">
-                            <img src="./images/pic-1.jpg" alt="">
-                        </div>
-                        <div class="new-header">
-                            <span class="date"><i class="fa-solid fa-calendar-days"></i> 13 Dec, 2024</span>
-                            <h3 class="new-title">Comment gagner un procés ?</h3>
-                        </div>
-                        <div class="new-body">
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi aspernatur numquam sed ab quidem blanditiis nihil reprehenderit natus nostrum deleniti nobis laboriosam incidunt voluptate illum, necessitatibus dignissimos assumenda quibusdam quasi!</p>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-                            <p>Commodi aspernatur numquam sed ab quidem blanditiis nihil reprehenderit natus nostrum deleniti nobis laboriosam incidunt voluptate illum, necessitatibus dignissimos assumenda quibusdam quasi!</p>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi aspernatur numquam sed ab quidem blanditiis nihil reprehenderit natus nostrum deleniti nobis laboriosam incidunt voluptate illum, necessitatibus dignissimos assumenda quibusdam quasi!</p>
-                        </div>
-                        <div class="new-footer">
-                            <a href="#" class="btn">Retour</a>
-                           <div class="btn-group">
-                                <a href="#" class="btn">Article précédent</a>
-                                <a href="#" class="btn">Article suivant</a>
-                           </div>
-                        </div>
-                    </div>
+            <section class="newItem" data-aos="fade-up" data-aos-duration="1500">
+                <div class="img-new">
+                    <img src="./images/contact.jpg" alt="">
                 </div>
-                
+                <div class="new-header">
+                    <span class="date"><i class="fa-solid fa-calendar-days"></i> 13 Dec, 2024</span>
+                    <h3 class="new-title">Comment gagner un procés ?</h3>
+                </div>
+                <div class="new-body">
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi aspernatur numquam sed ab quidem blanditiis nihil reprehenderit natus nostrum deleniti nobis laboriosam incidunt voluptate illum, necessitatibus dignissimos assumenda quibusdam quasi!</p>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                    <p>Commodi aspernatur<strong> numquam sed ab quidem blanditiis nihil reprehenderit natus nostrum deleniti nobis laboriosam incidunt</strong> voluptate illum, necessitatibus dignissimos assumenda quibusdam quasi!</p>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi aspernatur numquam sed ab quidem blanditiis nihil reprehenderit natus nostrum deleniti nobis laboriosam incidunt voluptate illum, necessitatibus dignissimos assumenda quibusdam quasi!</p>
+                    <h4>What is lorem ipsum ?</h4>
+                    <p>Lorem ipsum, dolor <a href="#">Lorem, ipsum.</a> sit amet consectetur adipisicing elit. Voluptate, quibusdam. Nostrum iusto dolor est molestiae dolores sequi numquam. Maiores mollitia corporis fuga quibusdam adipisci ipsa qui libero repudiandae deleniti quis.</p>
+                    <h4>Test of unordered list :</h4>
+                    <ul>
+                        <li>Lorem, ipsum dolor.</li>
+                        <li>Lorem ipsum dolor sit amet consectetur.</li>
+                        <li>Lorem, ipsum dolor. Lorem.</li>
+                    </ul>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi reprehenderit tenetur, vitae ipsam <strong>eos omnis</strong> esse alias, fugiat molestiae velit dolor consequuntur. Ipsa sint corrupti deserunt iusto harum voluptas quidem?</p>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi reprehenderit tenetur, vitae ipsam eos omnis esse alias, fugiat molestiae velit dolor consequuntur. Ipsa sint corrupti deserunt iusto harum voluptas quidem?</p>
+                </div>
+                <div class="new-footer">
+                    <a href="./blog.html" class="btn btn-retour">Retour</a>
+                <div class="btn-group">
+                        <a href="#" class="btn">Article précédent</a>
+                        <a href="#" class="btn">Article suivant</a>
+                </div>
+                </div>
             </section>
             <aside>
                 <div class="container">
@@ -148,7 +153,7 @@
         </div>
         <section class="contact">
             <div class="container">
-                <div class="form" data-aos="fade-up" data-aos-duration="1500">
+                <div class="form" data-aos="fade-right" data-aos-duration="1500">
                     <h2 class="title"><span class="subtitle">Contactez-nous</span>N'hésitez pas à nous contacter pour plus d'informations</h2>
                     <form action="#" method="post">
                         <div class="input-group">
@@ -168,8 +173,8 @@
                         </div>
                     </form>
                 </div>   
-                <div class="img-bloc">
-                    <img src="./images/contact.jpg" alt="Contactez-nous">
+                <div class="img-bloc" data-aos="fade-left" data-aos-duration="1500">
+                    <img src="./images/contact-us.jpg" alt="Contactez-nous">
                 </div>
             </div>
         </section>
