--- a/blog.html
+++ b/blog.html
@@ -196,7 +196,7 @@
         </div>
         <section class="contact">
             <div class="container">
-                <div class="form" data-aos="fade-up" data-aos-duration="1500">
+                <div class="form" data-aos="fade-right" data-aos-duration="1500">
                     <h2 class="title"><span class="subtitle">Contactez-nous</span>N'hésitez pas à nous contacter pour plus d'informations</h2>
                     <form action="#" method="post">
                         <div class="input-group">
@@ -216,8 +216,8 @@
                         </div>
                     </form>
                 </div>   
-                <div class="img-bloc">
-                    <img src="./images/contact.jpg" alt="Contactez-nous">
+                <div class="img-bloc" data-aos="fade-left" data-aos-duration="1500">
+                    <img src="./images/contact-us.jpg" alt="Contactez-nous">
                 </div>
             </div>
         </section>
