--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,7 @@
     <main>
         <section class="contact">
             <div class="container">
-                <div class="form" data-aos="fade-up" data-aos-duration="1500">
+                <div class="form" data-aos="fade-right" data-aos-duration="1500">
                     <h2 class="title"><span class="subtitle">Formulaire de contact</span>Nous sommes toujours là pour vous assister dans toutes vos démarches judiciaires</h2>
                     <form action="#" method="post">
                         <div class="input-group">
@@ -84,7 +84,7 @@
                         </div>
                     </form>
                 </div>
-                <div class="infos" data-aos="fade-up" data-aos-duration="1500">
+                <div class="infos" data-aos="fade-left" data-aos-duration="1500">
                     <h2>Informations</h2>
                     <div class="item">
                         <h3>Adresse</h3>
