--- a/servicelist.html
+++ b/servicelist.html
@@ -56,7 +56,7 @@
         </div>
         <div class="banner interne">
             <div class="slogan" data-aos="fade-up" data-aos-duration="1500">
-                <h1>Nos <strong>domaines</strong> d'intervention<br>Des services de <strong>hautes</strong> qualités</h1>
+                <h1>Nos <strong>domaines</strong> d'intervention</h1>
                 <p>Nous vous assistons dans toutes vos situations judiciaires</p>
                 <div class="btn-group">
                     <a href="./contact.html" class="btn">Contactez-nous</a>
@@ -111,7 +111,7 @@
         </section>
         <section class="contact">
             <div class="container">
-                <div class="form" data-aos="fade-up" data-aos-duration="1500">
+                <div class="form" data-aos="fade-right" data-aos-duration="1500">
                     <h2 class="title"><span class="subtitle">Contactez-nous</span>N'hésitez pas à nous contacter pour plus d'informations</h2>
                     <form action="#" method="post">
                         <div class="input-group">
@@ -131,8 +131,8 @@
                         </div>
                     </form>
                 </div>   
-                <div class="img-bloc">
-                    <img src="./images/contact.jpg" alt="Contactez-nous">
+                <div class="img-bloc" data-aos="fade-left" data-aos-duration="1500">
+                    <img src="./images/contact-us.jpg" alt="Contactez-nous">
                 </div>
             </div>
         </section>
