--- a/index.html
+++ b/index.html
@@ -460,13 +460,13 @@
                 </form>
             </div>
         </section>
-        <section class="map" data-aos="fade-up" data-aos-duration="1500">
+        <!-- <section class="map" data-aos="fade-up" data-aos-duration="1500">
             <h2 class="title"><span class="subtitle">Où nous trouver ?</span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit, nemo</h2>
             <div class="zone" data-aos="fade-up" data-aos-duration="1500">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.073013073073!2d3.876715314266073!3d43.61076972238347!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12b5f6f4b3b3b1e1%3A0x1
                 1b3b1e1b3b1b3b1!2sMontpellier!5e0!3m2!1sfr!2sfr!4v1633663666827!5m2!1sfr!2sfr" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
-        </section>
+        </section> -->
     </main>
     <footer>
         <section class="footer-1">
